# PactAI

./: .env.example  .gitignore  =5.0.0  FEATURES_KNOWLEDGE_BASE.md  FLOW.md  README.md  docker-compose.yml  export_demo.py  fix_service.py  fix_tool_results.py  import_to_aura.py  test_intelligence.py  test_pdf_system.py  update_contract_types.py  upload_cli.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  agent_manager.py  contract_chat_agent.py  dependencies.py  llm_manager.py  main.py  pyproject.toml  run_migration.py
backend/agents/: agent_workflow_tracker.py  chunking_agent.py  clause_extraction_agent.py  contract_intelligence_agents.py  contract_intelligence_agents_v2.py  cuad_classifier_agent.py  cuad_mitigation_tools.py  enhanced_cuad_tools.py  enhanced_pdf_processing_agent.py  feedback_learning_system.py  intelligence_state.py  intelligence_tools.py  optimized_cuad_tools.py  pdf_processing_agent.py  pdf_state.py  pdf_tools.py  policy_agents.py  policy_workflow_orchestrator.py  policy_workflow_supervisor.py  section_extraction_agent.py
backend/api/: __init__.py  audit_api.py  contract_intelligence.py  contracts.py  debug.py  development.py  document_upload.py  enhanced_contract_search.py  enhanced_document_upload.py  feedback_api.py  monitoring_api.py  patterns_api.py  policy_api.py  supervisor_api.py
backend/application/: __init__.py
backend/domain/: entities.py  value_objects.py
backend/embeddings/: README.md  migrator.py  orchestrator.py  validator.py
backend/factories/: document_processor_factory.py
docs/: ARCHITECTURE.md  (+17 more)
(+208 files in other folders)
